--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:unit": "jest .unit.test.ts",
+    "test:int": "jest .int.test.ts"
   },
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
     "@types/three": "^0.175.0",
@@ -26,6 +30,8 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
