--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@jest/globals": "^29.7.0",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
+    "@tailwindcss/vite": "^4.1.3",
     "@types/three": "^0.175.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.3",
     "three": "^0.175.0"
   },
   "devDependencies": {
@@ -46,6 +48,7 @@
     "globals": "^15.15.0",
     "jest": "^29.7.0",
     "playwright": "^1.51.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "storybook": "^8.6.12",
     "ts-jest": "^29.3.1",
     "typescript": "~5.7.2",
