--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "^9.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "@types/three": "^0.175.0",
+    "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3",
