--- a/.github/workflows/actions-check-version.yml
+++ b/.github/workflows/actions-check-version.yml
@@ -30,7 +30,7 @@ jobs:
           echo "Success"
 
       - name: Checkout Base
-        uses: action/checkout@4
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.base_ref }}
           sparse-checkout: .
