--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     "@jest/globals": "^29.7.0",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.49.9",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/react-modal": "^3.16.3",
     "@types/three": "^0.175.0",
+    "dotenv": "^16.5.0",
     "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
     "tailwindcss": "^4.1.3",
     "three": "^0.175.0"
   },
