--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-modal": "^3.16.3",
     "@types/three": "^0.175.0",
     "dotenv": "^16.5.0",
+    "jotai": "^2.12.5",
     "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
