--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.49.9",
     "@tailwindcss/vite": "^4.1.3",
     "@types/react-modal": "^3.16.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.175.0",
     "dotenv": "^16.5.0",
     "jotai": "^2.12.5",
@@ -30,6 +31,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
+    "react-router": "^7.6.2",
     "tailwindcss": "^4.1.3",
     "three": "^0.175.0"
   },
