--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "landing-page",
   "private": true,
-  "version": "0.1.5",
+  "version": "0.2.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,13 +18,18 @@
     "@jest/globals": "^29.7.0",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "^4.1.3",
     "@types/three": "^0.175.0",
+    "@woowa-babble/random-nickname": "^1.0.2",
+    "dotenv": "^16.5.0",
+    "jotai": "^2.12.5",
     "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
