--- a/package.json
+++ b/package.json
@@ -10,37 +10,22 @@
     "preview": "vite preview",
     "test": "jest",
     "test:unit": "jest .unit.test.ts",
-    "test:int": "jest .int.test.ts",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test:int": "jest .int.test.ts"
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
-    "@react-three/drei": "^10.0.5",
-    "@react-three/fiber": "^9.1.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "^4.1.3",
-    "@types/three": "^0.175.0",
     "dotenv": "^16.5.0",
     "jotai": "^2.12.5",
     "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3",
-    "three": "^0.175.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.21.0",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/experimental-addon-test": "^8.6.12",
-    "@storybook/preview-api": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
-    "@storybook/test": "^8.6.12",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -49,21 +34,14 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^0.12.0",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
     "playwright": "^1.51.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "storybook": "^8.6.12",
     "ts-jest": "^29.3.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vitest": "^3.1.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
