--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "landing-page",
   "private": true,
-  "version": "0.3.10",
+  "version": "0.3.11",
   "type": "module",
   "scripts": {
     "dev": "next dev",
@@ -24,11 +24,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@next/eslint-plugin-next": "^15.5.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.21.0",
+    "eslint-config-next": "^15.5.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.4.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1"
